# globalify

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  CLAUDE.md  DESIGN.md  Dockerfile  Dockerfile copy  PRODUCT.md  README.md  asdf.toml  cloudbuild.yaml  dev.Dockerfile  docker-compose.yaml  docker-compose.yml  globalify - blockchain.csv  investor.csv  investor_index.jsonl  investor_list.json  investors_vc.csv  package-lock.json  package.json  ppnew.toml  ppold.toml  pyproject.toml  pyvenv.cfg  requirements.in  requirements.txt  start.ps1  start.py  start.sh  start_prod.sh  stripe_test.py  tailwind.config.js  yaml.yaml
.github/workflows/: ci.yaml  ci.yml  code_quality.yml.yml  ruff.yml  tests.yaml
.superpowers/sdd/: p4-cleanup-report.md
data/: funds_vc.csv  globalify - blockchain.csv  investor.csv  investor_list.json  mercury_investor.jsonl  signal_investor_urls.jsonl  signal_investors.jsonl
docs/: cap-selfhosting.md  codebase-map.md  deployment-docker-compose.md  phase-1-planning-brief.md  phase-2-planning-brief.md  pivot-research.md  search-embeddings.md
docs/superpowers/plans/: 2026-06-22-p2d-fix-template-regressions.md  2026-06-22-phase-0-modernize-foundation.md  2026-06-22-phase-1a-strip.md  2026-06-22-phase-1b-remodel.md  2026-06-22-phase-1c-search.md  2026-06-22-phase-2a-foundation.md  2026-06-22-phase-2b-pages.md  2026-06-22-phase-2c-seo.md  2026-06-22-phase-2d-catalog-retire.md  2026-06-22-phase-2e-htmx-auth.md  2026-06-22-phase-3-infra.md  2026-06-22-phase-4-billing.md  2026-06-23-gemini-embeddings.md  2026-06-23-p5-task-2-org-claim-cta-badge.md  2026-06-23-phase-5-claim.md  2026-06-23-phase-6-collectors.md  2026-06-25-redesign-rebrand-the-ledger.md
docs/superpowers/specs/: 2026-06-22-globalify-pivot-design.md  2026-06-25-redesign-rebrand-design.md  2026-06-27-favicon-and-meta-preview-design.md
migrations/versions/: 0558ba631472_.py  1e3561d00b0f_baseline_schema.py  2860207818f1_add_login_token_table.py  30fbd9f02f82_initial_migration.py  3ed6c2e7d073_.py  48581d5c299b_.py  4e460892766d_.py  561047b0267f_.py  5a87f3055de1_.py  5c32ad357046_.py  7a8b9c0d1e2f_pro_entitlement.py  8038e102c15f_.py  83b34cbc27cc_.py  886a73fb884d_.py  a1b2c3d4e5f6_add_entity_model.py  a3257b94a8d9_.py  a687120402a9_.py  b2c3d4e5f6a7_backfill_entity_model.py  c3d4e5f6a7b8_drop_dead_platform_tables.py  ce3db9cc9591_.py  d1e2f3a4b5c6_add_industry_slug.py  d30a6c4366ad_.py  d698bb89d226_.py  e5f6a7b8c9d0_drop_legacy_catalog_tables.py  ead866046ba6_.py  f9da0a2faf7b_.py  g1h2i3j4k5l6_add_processed_webhook_table.py  h2i3j4k5l6m7_add_organization_user_id.py  i3j4k5l6m7n8_add_source_provenance.py
server/: Dockerfile
server/src/: Dockerfile
server/src/migrations/versions/: c4fb538638d3_.py  dc7806e4f820_.py  ddf9509068b7_.py
server/src/project/: __init__.py  error_messages.py  extensions.py  google_storage.py  models.py  stripe_util.py  utils.py
server/src/project/routes/: auth.py  blog.py  (+5 more)
server/src/tests/: conftest.py
src/project/: __init__.py  config.py  extensions.py  models.py  test_typesense.py
src/project/collectors/: __init__.py  base.py  edgar.py  sample.py
src/project/models/: __init__.py  auth_token.py  backfill.py  claim.py  deck.py  entity.py  entity_search.py  helpers.py  investment.py  investor.py  message.py  microwebpage.py  pitchdeck.py  presentation.py  search.py  seed.py  superconnect.py  user.py  webhook.py
src/project/routes/: admin.py  auth.py  claim.py  deck.py  investment.py  main.py  message.py  microwebpage.py  onboarding.py  payment.py  pitchdeck.py  presentation.py  profile.py  public.py  search.py  settings.py  sitemap.py  superconnect.py
src/project/schemas/: company.py  deck.py  funding_round.py  investment.py  investor.py  message.py  notification.py  profile.py  superconnect.py  user.py
src/project/templates/: about.html  arstan.html  bookmarks.html  coming_soon.html  company.html  company_profile.html  construction.html  dashboard_firm.html  dashboard_investor.html  dashboard_investor_old.html  deck.html  download.html  edit_investor.html  eric.html  faq.html  gemini.html  history.html  incubation.html  index.html  invalid_token.html  investment.html  investment_firm.html  investment_firms_bookmarks.html  investor.html  investors_bookmarks.html  jennifer.html  pitch_deck.html  presentation.html  pricing.html  privacy_policy.html  refund_policy.html  search.html  search_companies.html  search_investment_firms.html  suggestions.html  suggestions_companies.html  suggestions_investment_firms.html  superconnect.html  terms_of_service.html  user_profile.html  (+4 more)
src/project/utils/: README.TYPESENSE.md  cap.py  decorators.py  email_verification.py  enums.py  fake_data.py  funcs.py  gemini.py  google_pubsub.py  google_storage.py  info_lists.py  paddle.py  parse_medium.py  posthog.py  scraper.py  search.py  sendgrid_email.py  status_enum.py  stripe.py  suggestion.py  typesense_cli.py  typesense_search.py
src/tests/: conftest.py
src/tests/models/: test_helpers.py  test_investment_firm.py  test_investor.py  test_user.py  test_waitlist.py
src/tests/routes/: test_auth.py  test_main.py  test_payment.py  test_profile.py  test_settings.py
tests/: conftest.py  test_ads.py  test_auth_magiclink.py  test_authenticated_pages.py  test_backfill.py  test_cap.py  test_claim.py  test_claim_repoint.py  test_collectors.py  test_collectors_edgar.py  test_config.py  test_email.py  test_embeddings.py  test_entitlement.py  test_entity_docbuilder.py  test_entity_models.py  test_entity_queries.py  test_entity_search.py  test_entity_search_embeddings.py  test_paddle_webhook.py  test_r2.py  test_seo_slugs.py  test_smoke.py
tests/fixtures/: edgar_formd.json
typesense-stubs/: analytics_rules.pyi  configuration.pyi  document.pyi  documents.pyi  keys.pyi  multi_search.pyi  operations.pyi  override.pyi  setup.py  synonym.pyi
(+377 files in other folders)
