[tool.poetry]
name = "globalify"
version = "0.1.0"
description = ""
authors = ["Barnacle322 <arstan.usenov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
flask-wtf = "^1.2.1"
flask-login = "^0.6.3"
authlib = "^1.3.0"
requests = "^2.31.0"
pycountry = "^23.12.11"
stripe = "^7.13.0"
google-cloud-storage = "^2.13.0"
pillow = "^10.2.0"
sendgrid = "^6.10.0"
psycopg = "^3.1.17"
psycopg-binary = "^3.1.17"
faker = "^22.6.0"
feedparser = "^6.0.10"
google-cloud-pubsub = "^2.19.0"
flask-debugtoolbar = "^0.14.1"
thefuzz = "^0.22.1"
googlemaps = "^4.10.0"
geopy = "^2.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pre-commit = "^3.5.0"
ruff = "^0.1.13"
python-dotenv = "^1.0.0"
coverage = "^7.4.0"
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    ".old_venv",
    "migrations",
    "instance",
]

# Same as Black.
line-length = 120
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "Q", "I", "N", "UP"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
