[project]
name = "globalify"
version = "1.0.0"
description = "This is the main project of the Globalify Ecosystem. It is a web app that help entrepreneurs and investors find each other easeier."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.7",
    "flask-wtf>=1.2.1",
    "flask-login>=0.6.3",
    "flask-debugtoolbar>=0.15.1",
    "sentry-sdk[flask]>=2.13.0",
    "google-cloud-storage>=2.18.2",
    "google-cloud-pubsub>=2.23.0",
    "googlemaps>=4.10.0",
    "pillow>=10.4.0",
    "pillow-heif>=0.18.0",
    "sendgrid>=6.11.0",
    "psycopg>=3.2.1",
    "psycopg-binary>=3.2.1",
    "faker>=28.0.0",
    "feedparser>=6.0.11",
    "thefuzz>=0.22.1",
    "geopy>=2.4.1",
    "typesense>=0.21.0",
    "click>=8.1.7",
    "python-slugify>=8.0.4",
    "pydantic>=2.8.2",
    "requests>=2.32.3",
    "authlib>=1.3.1",
    "pycountry>=24.6.1",
    "stripe>=10.8.0",
    "more-itertools>=10.4.0",
    "pyjwt>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
    "ruff>=0.6.2",
    "python-dotenv>=1.0.1",
    "coverage>=7.6.1",
    "freezegun>=1.5.1",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    ".old_venv",
    "migrations",
    "instance",
    "typesense-stubs",
]

# Same as Black.
line-length = 120
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "Q", "I", "N", "UP"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
