[project]
name = "globalify"
version = "1.0.0"
description = "This is the main project of the Globalify Ecosystem. It is a web app that help entrepreneurs and investors find each other easeier."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.7",
    "flask-wtf>=1.2.1",
    "flask-login>=0.6.3",
    "flask-debugtoolbar>=0.15.1",
    "sentry-sdk[flask]>=2.13.0",
    "psycopg>=3.2.1",
    "psycopg-binary>=3.2.1",
    "faker>=28.0.0",
    "feedparser>=6.0.11",
    "thefuzz>=0.22.1",
    "geopy>=2.4.1",
    "click>=8.1.7",
    "python-slugify>=8.0.4",
    "pydantic>=2.8.2",
    "requests>=2.32.3",
    "pycountry>=24.6.1",
    "more-itertools>=10.4.0",
    "pyjwt>=2.9.0",
    "posthog>=3.7.4",
    "granian>=2.7.6",
    "pydantic-settings>=2.14.2",
    "typesense>=2.0,<3",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
    "ruff>=0.6.2",
    "python-dotenv>=1.0.1",
    "coverage>=7.6.1",
    "freezegun>=1.5.1",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    ".old_venv",
    "migrations",
    "instance",
    "typesense-stubs",
]

# Same as Black.
line-length = 120
indent-width = 4

target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "Q", "I", "N", "UP"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
